commit "up to date"

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,13 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+    <IfModule mod_php7.c>
+       php_value post_max_size 2000M
+       php_value upload_max_filesize 2000M
+       php_value max_execution_time 18000000
+       php_value memory_limit  2000M
+    </IfModule>
+
     RewriteEngine On
 
     # Handle Authorization Header
